# epi-method-agent-mcp

./: .gitignore  README.md  agent.py  pipeline.py  pyproject.toml  server.py
examples/: batch_example.csv  rfp_example.json
knowledge_base/: 01_question_structuring.md  02_fit_for_purpose.md  03_target_trial_emulation.md  04_bias_diagnosis.md  AGENTS.md  bias_library.md  database_assumptions.md  method_library.md  reporting_guidelines.md  terminology.md
